--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,11 +1,13 @@
 <div class="container">
-  <header><img src="images/corneal-small.png" class="img-responsive main-image"></header>
+<center><header><img src="https://images.pexels.com/photos/320617/pexels-photo-320617.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260g" width="300" height="300" class="img-responsive main-image"></header></center>
   <div class="col-md-8 col-md-offset-2">
-    <h2>Sinatra Template Default Page</h2>
+    <h2>Steven Vlogs</h2>
 
     <div class="content">
-      <p>Welcome to the Sinatra Template! If you're seeing this page, then everything is working
-      as expected. To get started, delete this file (<code>app/views/welcome.erb)</code> and begin adding
+      <p>Welcome to the Steven Vlogs! 
+      Once you create an account you will be able to list your favorite vloggers and also leave an description. 
+      Thanks for visting and hope you enjoy Steven Vlogs.   
+      To get started, delete this file (<code>app/views/welcome.erb)</code> and begin adding
       your own actions to <code>application_controller.rb</code>. For more information, see the <a href="https://github.com/thebrianemory/corneal">README</a>.</p>
     </div>
 
