Added New Vlog page and editing vlogs controller

--- a/app/views/vlogs/new.erb
+++ b/app/views/vlogs/new.erb
@@ -1,1 +1,12 @@
-<h1>Insert the form to create a new instance of your model.</h1>
+<h3> Add Your New Favorite Vlogger below and leave a description</h3>
+
+<form method="POST" action="/vlogs">
+<p>Name: <input type="text" name="name"/></p>
+<p>Genre: <input type="text" name="genre"/></p>
+
+<textarea rows = "5" cols = "50" name = "description">
+            Description
+</textarea>
+
+<input type="submit" value-"Add New Vlogger" id="submit"/>
+</form>
