--- a/app/views/vlogs/show.erb
+++ b/app/views/vlogs/show.erb
@@ -1,1 +1,11 @@
-<h1>This is the show page for an individual instance of your model.</h1>
+<h1>Delete Vlog</h1>
+
+
+<p><%= @vlog.name %></p>
+<p>Genre: <%= @vlog.genre %></p>
+<p>Description: <%= @vlog.description %></p>
+<% if. @vlog.user == current_user %>
+
+<a href="/vlogs/<%=@vlog.id%>/edit">Edit</a>
+
+
