--- a/app/views/vlogs/show.erb
+++ b/app/views/vlogs/show.erb
@@ -1,4 +1,4 @@
-<h1>Delete Vlog</h1>
+<h1>Edit or Delete Favoite Vlogger Post</h1>
 
 
 <p><%= @vlog.name %></p>
@@ -7,5 +7,12 @@
 <% if. @vlog.user == current_user %>
 
 <a href="/vlogs/<%=@vlog.id%>/edit">Edit</a>
+
+<form method="POST" action="/vlogs/<%=@vlog.id%> ">
+<input type="hidden" name="_method" value="DELETE" />
+<input type="submit" value="Delete Favorite Vlogger" />
+</form>
+
+<% end %>
 
 
