--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -4,22 +4,23 @@
     <h2>Steven Vlogs</h2>
 
     <div class="content">
-      <p>Welcome to the Steven Vlogs! 
-      Once you create an account you will be able to list your favorite vloggers and also leave an description. 
-      Thanks for visting and hope you enjoy Steven Vlogs.   
-      To get started, delete this file (<code>app/views/welcome.erb)</code> and begin adding
-      your own actions to <code>application_controller.rb</code>. For more information, see the <a href="https://github.com/thebrianemory/corneal">README</a>.</p>
-    </div>
-
-    <div class="sidebar">
-      <h3>Environment</h3>
-      <ul>
-        <li><b>Ruby:</b> <%= RUBY_VERSION %></li>
-        <li><b>Environment:</b> <%= ENV["RACK_ENV"] %></li>
-        <li><b>Server:</b> <%= @env["SERVER_SOFTWARE"] %></li>
-        <li><b>Port:</b> <%= @env["SERVER_PORT"] %></li>
-      </ul>
-    </div>
-
-  </div>
-</div>
+    <p><p>Welcome to the Steven Vlogs! 
+    Once you create an account you will be able to list your favorite vloggers and also leave an description. 
+    Thanks for visting and hope you enjoy Steven Vlogs.</p>
+  
+    <ul>
+    <li><a href="/vlogs">Vloggers</a></li><br>
+    <li><a href="/login">Login Page</a></li><br>
+    <li><a href="/signup">Sign Up Page</a></li><br>
+  
+   
+    <a href="/vlogs/new">Add New Vlogger</a></li>
+    
+    <form method="POST" action="/login">
+    <input type="submit" value="Log Out Page">
+    </form>
+   
+    </ul>
+  
+    </body>
+  </html>
