--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -3,24 +3,23 @@
   <div class="col-md-8 col-md-offset-2">
     <h2>Steven Vlogs</h2>
 
-    <div class="content">
-    <p><p>Welcome to the Steven Vlogs! 
-    Once you create an account you will be able to list your favorite vloggers and also leave an description. 
-    Thanks for visting and hope you enjoy Steven Vlogs.</p>
-  
     <ul>
     <li><a href="/vlogs">Vloggers</a></li><br>
     <li><a href="/login">Login Page</a></li><br>
     <li><a href="/signup">Sign Up Page</a></li><br>
+
+    <% if logged_in? %>
   
-   
     <a href="/vlogs/new">Add New Vlogger</a></li>
-    
+
+
     <form method="POST" action="/login">
     <input type="submit" value="Log Out Page">
     </form>
    
+    <% end %>
     </ul>
-  
+
+
     </body>
   </html>
