--- a/app/views/vlogs/edit.erb
+++ b/app/views/vlogs/edit.erb
@@ -1,7 +1,7 @@
-<h1>Edit Vlogger <%= @vlogger.name %></h1>
-<form method = "POST" action="/vlogger/<%=@vlogger.id%>">
+<h1>Edit Vlogger <%= @vlog.name %></h1>
+<form method = "POST" action="/vlog/<%=@vlog.id%>">
 <input type="hidden" name="_method" value="PATCH">
 
-<p>Name: <input type="text" name="vlogger[name]" value="<%=@vlogger.name%>" /></p>
+<p>Name: <input type="text" name="vlog[name]" value="<%=@vlog.name%>" /></p>
 <input type="submit" value="Update Vlogger" id="submit" />
 </form>
