--- a/app/views/vlogs/new.erb
+++ b/app/views/vlogs/new.erb
@@ -3,10 +3,7 @@
 <form method="POST" action="/vlogs">
 <p>Name: <input type="text" name="name"/></p>
 <p>Genre: <input type="text" name="genre"/></p>
-
-<textarea rows = "5" cols = "50" name = "description">
-            Description
-</textarea>
+<p>Description: <input type="textarea" name="description">
 
 <input type="submit" value-"Add New Vlogger" id="submit"/>
 </form>
