--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -4,10 +4,22 @@
 <!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
   <head>
+
+  <center><ul class="nav navbar-bar">
+  <li><a href="/vlogs">Home</a></li>
+  <li><a href="/vlogs">Vloggers</a></li> 
+  <li><a href="/login">Login Page</a></li> 
+  <li><a href="/signup">Sign Up Page</a></li>
+  </ul>
+
+
   <center><header><img src="https://images.pexels.com/photos/320617/pexels-photo-320617.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260g" width="300" height="300" class="img-responsive main-image"></header></center>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
 
+
+    <br>
+    <br>
     <title>Steven Vlogs</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -18,6 +30,7 @@
     <div class="wrapper">
 
 
+
     <p><p>Welcome to the Steven Vlogs! 
     Once you create an account you will be able to list your favorite vloggers and also leave an description. 
     Thanks for visting and hope you enjoy Steven Vlogs.</p>
@@ -26,10 +39,7 @@
     
     
     <br>
-    <form method="POST" action="/login">
-    <input type="submit" value="Log Out Page">
-    </form>
-   
+    
     </ul>
 
        
