--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -5,14 +5,6 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
   <head>
 
-  <center><ul class="nav navbar-bar">
-  <li><a href="/vlogs">Home</a></li>
-  <li><a href="/vlogs">Vloggers</a></li> 
-  <li><a href="/login">Login Page</a></li> 
-  <li><a href="/signup">Sign Up Page</a></li>
-  </ul>
-
-
   <center><header><img src="https://images.pexels.com/photos/320617/pexels-photo-320617.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260g" width="300" height="300" class="img-responsive main-image"></header></center>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
@@ -27,13 +19,28 @@
     <link rel="stylesheet" href="/stylesheets/main.css" />
   </head>
   <body>
-    <div class="wrapper">
+    
+  <center><ul class="nav navbar-bar">
+  <li><a href="/vlogs">Home</a></li>
+  <li><a href="/login">Login Page</a></li> 
+  <li><a href="/signup">Sign Up Page</a></li>
 
+  <% if logged_in? %>
+  <li><a href="/vlogs/new">Add New Vlogger</a></li>
+  <form method="POST" action="/logout">
+  <input type="submit" value="Log Out">
+  </form>
+  <% end %>
+  </ul>
 
 
     <p><p>Welcome to the Steven Vlogs! 
     Once you create an account you will be able to list your favorite vloggers and also leave an description. 
     Thanks for visting and hope you enjoy Steven Vlogs.</p>
+    
+    
+    
+  
     <%= yield %>
 
     
@@ -45,9 +52,12 @@
        
 
       <footer class="branding">
+
         <small>&copy; 2021 <strong>Steven Vlogs</strong></small>
       </footer>
     </div>
+    
+
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <!--[if lt IE 7]>
