fixing view page, edit page isn't working

--- a/app/views/vlogs/edit.erb
+++ b/app/views/vlogs/edit.erb
@@ -6,7 +6,7 @@
 <input type="hidden" name="_method" value="patch">
 <p>Name: <input type="text" name="vlog[name]" value="<%=@vlog.name%>" /></p>
 <p>Genre: <input type="text" name="vlog[genre]" value="<%=@vlog.genre%>" /></p>
-<p>Description: <input type="textarea" name="vlog[description]" value="<%=@vlog.description%>" /></p>
+<p>Description: <textarea type="text" name="vlog[description]" value="<%=@vlog.description%>" /></p>
 
 
 <input type="submit" value="Update Vlogger" id="submit" />
