--- a/app/views/vlogs/show.erb
+++ b/app/views/vlogs/show.erb
@@ -4,12 +4,24 @@
 
 <h2><p><%= @vlog.name %></p></h2>
 <p>Genre: <%= @vlog.genre %></p>
+<p>Description: <%= @vlog.description %></p>
 
+
+<% if @vlog.user == current_user %>
 <a href="/vlogs/<%=@vlog.id%>/edit">Edit</a>
-<form method="POST" action="/vlogs/<%=@vlog.id%>">
-<input type="hidden" name="_method" value="DELETE" />
+<form method="post" action="/vlogs/<%=@vlog.id%>">
+<input type="hidden" name="_method" value="delete" />
 <input type="submit" value="Delete Favorite Vlogger"/>
 </form>
+<% end %>
+
+<% if logged_in? %>
+<form method="post" action="/logout">
+<input type="submit" value="Log Out"></p>
+<% else %>
+<h4><a href="/signup">Sign Up</a></h4>
+</form>
+<% end %>
 
 
 
