Added Welcome Page

--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,25 +1,24 @@
-<h1>Sign Up Below to Talk About Your Favorite Vloggers.</h1>
-<br>
-<br>
-<form action="/signup" method="POST">
-<label for="name">Name: </label>
-<input type="text" name="name" />
-<br>
-<br>
-<label for="username">Username: </label>
-<input type="text" name="username" />
-<br>
-<br>
-<label for="email">Email: </label>
-<input type="text" name="email" />
-<br>
-<br>
-<label for="password">Password: </label>
-<input type="text" name="password" />
-<br>
-<br>
-<input type="submit" value="Create New User" />
-
-</form>
-
+<!DOCTYPE html>  
+<html> 
+    <body>
+    <h1>Sign Up Below to Talk About Your Favorite Vloggers.</h1>
+    <br>
+    <br>
+    <form action="/signup" method="POST">
+    <label for="username">Username: </label>
+    <input type="text" name="username" />
+    <br>
+    <br>
+    <label for="email">Email: </label>
+    <input type="text" name="email" />
+    <br>
+    <br>
+    <label for="password">Password: </label>
+    <input type="text" name="password" />
+    <br>
+    <br>
+    <input type="submit" value="Create New User" />
+    </form>
+</body>
+</html>
 
