--- a/app/views/vlogs/index.erb
+++ b/app/views/vlogs/index.erb
@@ -4,7 +4,7 @@
 
 
 <% if logged_in? %>
-<h3> Hello, <%= current_user.name %> </h3>
+<h3> Hello, <%= current_user.username %> </h3>
 <% end %>
 
 <ul>
